@@ -37,6 +37,7 @@ mlr_2.2:
   --- extension to smote algorithm (sampling): minority class observations in binary classification
       are either chosen via sampling or alternatively, each minority class observation is used an
       equal number of times
+- added PimaIndiansDiabetes as example task pid.task
 
 - new learners:
 -- classif.bartMachine
